Plan for the project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
+<!-- Plan jest taki, żeby zrobić 'About me" z boku po prawej,' -->
+<!-- na środku feed z artykułami z przepisami do 3 dań + fotki -->
+<!-- Ingredients podane jako lista + makro w tabelkach -->
+<!-- stylesheet jeden dla całego projektu -->
 <html>
     <head>
-        <title>My Webpage</title>
+      <meta charset="UTF-8">
+        <title>Meet Szympatka</title>
     </head>
     <body>
-        Hello, world!
+        Hey guys!
+        <br>
+        Here I will show you some recipes using which you can cook yoursevles dinner!
+        <br>
+        MENU:
+        <ol>
+          <li>Salad</li>
+          <li>Kotleto</li>
+          <li>Desero</li>
+        </ol>
     </body>
 </html>
