--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 <!DOCTYPE html>
-<!-- Plan jest taki, żeby zrobić 'About me" z boku po prawej,' -->
-<!-- na środku feed z artykułami z przepisami do 3 dań + fotki -->
-<!-- Ingredients podane jako lista + makro w tabelkach -->
 <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,12 +8,16 @@
     </head>
     <body>
       <div class="container">
+        <div class="head-box"
+        <a href=index.html>
         <div class="row">
-          <div class="col header">
+            <div class="col header">
             <h1>Hey guys!</h1>
             <h2>Let's cook :)</h2>
           </div>
         </div>
+        </a>
+      </div>
         <div class="row">
           <div class="col">
             <h1>Feed</h1><br>
