Updated grid layout

--- a/index.html
+++ b/index.html
@@ -7,37 +7,84 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-      <div class="container">
-        <div class="head-box"
+      <div class="container head-box">
         <a href=index.html>
-        <div class="row">
-            <div class="col header">
+            <div class="header">
             <h1>Hey guys!</h1>
             <h2>Let's cook :)</h2>
-          </div>
-        </div>
         </a>
       </div>
         <div class="row">
           <div class="col">
-            <h1>Feed</h1><br>
-            Here I will show you some recipes using which you can cook yoursevles dinner!
+            <h1>Feed</h1>
+            <p> Hi there!<br>
+              Here I will show you some recipes using which you can cook yoursevles dinner!<br>
+            Just pick any that you like and get cookin' :) </p>
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            Salad recipe.
+      </div>
+      <div class="container">
+        <div class="row d-flex flex-wrap">
+          <div class="col-sm-4">
+            <h4>Salad recipe.</h4>
+            <a href=salad.html>
+            <img src=salad.jpg name="salad" class="img-fluid img-thumbnail" style="float:left">
+          </a>
+            <p> Here's a recipe for an easy chicken lime salad. Super simple, super tasty!<br>
+              All you're going to need are:
+            <ul>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+            </ul>
+          </p>
+          <a href=salad.html>
             <button type="button" class="btn btn-outline-primary">Read more</button>
+          </a>
           </div>
-          <div class="col">
-            Burger recipe.
+          <div class="col-sm-4">
+            <h4>Burger recipe.</h4>
+            <a href=burger.html>
+            <img src=burger.jpg name="burger" class="img-fluid img-thumbnail" style="float:left">
+          </a>
+            <p> Here's a recipe for an easy chicken lime salad. Super simple, super tasty!<br>
+              All you're going to need are:
+            <ul>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+            </ul>
+          </p>
+          <a href=burger.html>
             <button type="button" class="btn btn-outline-primary">Read more</button>
+          </a>
           </div>
-          <div class="col">
-            Deser recipe.
+          <div class="col-sm-4">
+            <h4>Dessert recipe.</h4>
+            <a href=dessert.html>
+            <img src=dessert.jpg name="dessert" class="img-fluid img-thumbnail" style="float:left">
+          </a>
+            <p> Here's a recipe for an easy chicken lime salad. Super simple, super tasty!<br>
+              All you're going to need are:
+            <ul>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+              <li>item</li>
+            </ul>
+          </p>
+          <a href=dessert.html>
             <button type="button" class="btn btn-outline-primary">Read more</button>
+          </a>
           </div>
-        </div>
     </div>
     </body>
 </html>
