Final home and updated salad.html

--- a/salad.html
+++ b/salad.html
@@ -1,6 +1,52 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>salad</title>
-</head>
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Meet Szympatka - Salad</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <body>
+      <div class="container head-box">
+        <a href=index.html>
+            <div class="header">
+            <h1>Hey guys!</h1>
+            <h2>Let's cook :)</h2>
+        </a>
+      </div>
+        <div class="row">
+          <div class="col">
+            <h1>Perfect!</h1>
+            <p> You've made your choice and picked a recipe.<br>
+            Now let's cook! </p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row d-flex flex-wrap">
+          <div class="col-sm-12">
+            <h4>Salad recipe.</h4>
+            <a href=salad.html>
+            <img src=salad.jpg name="salad" class="img img-fluid img-thumbnail float-left">
+          </a>
+            <p> Here's a recipe for an easy chicken lime salad. Super simple, super tasty!<br>
+              All you're going to need are:
+            <ul>
+              <li>lettuce</li>
+              <li>chicken</li>
+              <li>chili</li>
+              <li>tomatoes</li>
+              <li>avocado</li>
+              <li>vinegar</li>
+            </ul>
+          </p>
+          <p> Now cut and mix all the ingredients.<br>
+            Prepare dressing with olive oil and vinegar et voila!
+          </p>
+          <a href=salad.html>
+            <button type="button" class="btn btn-outline-primary">Download pdf</button>
+          </a>
+          </div>
+    </div>
+    </body>
 </html>
