--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Meet Szympatka</title>
+        <title>Meet Szympatka - Home</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css" />
     </head>
@@ -28,17 +28,17 @@
           <div class="col-sm-4">
             <h4>Salad recipe.</h4>
             <a href=salad.html>
-            <img src=salad.jpg name="salad" class="img-fluid img-thumbnail" style="float:left">
+            <img src=salad.jpg name="salad" class="img img-fluid img-thumbnail float-left">
           </a>
             <p> Here's a recipe for an easy chicken lime salad. Super simple, super tasty!<br>
               All you're going to need are:
             <ul>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
+              <li>lettuce</li>
+              <li>chicken</li>
+              <li>chili</li>
+              <li>tomatoes</li>
+              <li>avocado</li>
+              <li>vinegar</li>
             </ul>
           </p>
           <a href=salad.html>
@@ -48,18 +48,21 @@
           <div class="col-sm-4">
             <h4>Burger recipe.</h4>
             <a href=burger.html>
-            <img src=burger.jpg name="burger" class="img-fluid img-thumbnail" style="float:left">
+            <img src=burger.jpg name="burger" class="img img-fluid img-thumbnail float-left">
           </a>
-            <p> Here's a recipe for an easy chicken lime salad. Super simple, super tasty!<br>
+            <p> Here's a recipe for a delicious homemade burger. Super simple, super tasty!<br>
               All you're going to need are:
             <ul>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-            </ul>
+              <li>beef</li>
+              <li>bun</li>
+              <li>lettuce</li>
+              <li>worcestershire souce</li>
+              <li>barbecue sauce</li>
+              <li>tomatoes</li>
+              <li>pickles</li>
+              <li>salt</li>
+              <li>pepper</li>
+            </ul><br>
           </p>
           <a href=burger.html>
             <button type="button" class="btn btn-outline-primary">Read more</button>
@@ -68,17 +71,17 @@
           <div class="col-sm-4">
             <h4>Dessert recipe.</h4>
             <a href=dessert.html>
-            <img src=dessert.jpg name="dessert" class="img-fluid img-thumbnail" style="float:left">
+            <img src=dessert.jpg name="dessert" class="img img-fluid img-thumbnail float-left">
           </a>
-            <p> Here's a recipe for an easy chicken lime salad. Super simple, super tasty!<br>
+            <p> Here's a recipe for an apple pie. Super simple, super tasty!<br>
               All you're going to need are:
             <ul>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
-              <li>item</li>
+              <li>apples</li>
+              <li>cinnamon</li>
+              <li>honey</li>
+              <li>flour</li>
+              <li>butter</li>
+              <li>sour cream</li>
             </ul>
           </p>
           <a href=dessert.html>
