Added table to salad.html

--- a/salad.html
+++ b/salad.html
@@ -19,26 +19,54 @@
             <h1>Perfect!</h1>
             <p> You've made your choice and picked a recipe.<br>
             Now let's cook! </p>
+            <h4>Salad recipe.</h4>
           </div>
         </div>
       </div>
       <div class="container">
         <div class="row d-flex flex-wrap">
-          <div class="col-sm-12">
-            <h4>Salad recipe.</h4>
+          <div class="col-sm-6">
             <a href=salad.html>
             <img src=salad.jpg name="salad" class="img img-fluid img-thumbnail float-left">
           </a>
+        </div>
+        <div class="col-sm-6">
             <p> Here's a recipe for an easy chicken lime salad. Super simple, super tasty!<br>
               All you're going to need are:
-            <ul>
-              <li>lettuce</li>
-              <li>chicken</li>
-              <li>chili</li>
-              <li>tomatoes</li>
-              <li>avocado</li>
-              <li>vinegar</li>
-            </ul>
+              <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Product</th>
+                  <th scope="col">Quantity</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Lettuce</td>
+                  <td>50g</td>
+                </tr>
+                <tr>
+                  <td>Chicken</td>
+                  <td>200g</td>
+                </tr>
+                <tr>
+                  <td>Avocado</td>
+                  <td>1</td>
+                </tr>
+                <tr>
+                  <td>Tomatoes</td>
+                  <td>100g</td>
+                </tr>
+                <tr>
+                  <td>Chili</td>
+                  <td>1-2</td>
+                </tr>
+                <tr>
+                  <td>Olive oil</td>
+                  <td>20ml</td>
+                </tr>
+              </tbody>
+            </table>
           </p>
           <p> Now cut and mix all the ingredients.<br>
             Prepare dressing with olive oil and vinegar et voila!
