Styesheets updated according to reqs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="col">
             <h1>Feed</h1>
-            <p> Hi there!<br>
+            <p id="welcome"> Hi there!<br>
               Here I will show you some recipes using which you can cook yoursevles dinner!<br>
             Just pick any that you like and get cookin' :) </p>
           </div>
