Last stylesheet update and adjusting subpages

--- a/burger.html
+++ b/burger.html
@@ -9,42 +9,71 @@
     <body>
       <div class="container head-box">
         <a href=index.html>
-            <div class="header">
+            <div class="header-burger">
             <h1>Hey guys!</h1>
             <h2>Let's cook :)</h2>
-        </a>
-      </div>
-        <div class="row">
-          <div class="col">
-            <h1>Perfect!</h1>
-            <p> You've made your choice and picked a recipe.<br>
-            Now let's cook! </p>
+          </a>
+        </div>
+          <div class="row">
+            <div class="col">
+              <h1>Perfect!</h1>
+              <p> You've made your choice and picked a recipe.<br>
+              Now let's cook! </p>
+              <h4>Burger recipe.</h4>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container">
-        <div class="row d-flex flex-wrap">
-          <div class="col-sm-12">
-            <h4>Burger recipe.</h4>
-            <a href=burger.html>
-            <img src=burger.jpg name="burger" class="img img-fluid img-thumbnail float-left">
-          </a>
-            <p> Here's a recipe for a delicious homemade burger. Super simple, super tasty!<br>
-              All you're going to need are:
-            <ul>
-              <li>beef</li>
-              <li>bun</li>
-              <li>lettuce</li>
-              <li>worcestershire souce</li>
-              <li>barbecue sauce</li>
-              <li>tomatoes</li>
-              <li>pickles</li>
-              <li>salt</li>
-              <li>pepper</li>
-            </ul><br>
-          </p>
-          <p> Now cut the vegetables and mix the meat with sauces.<br>
-            Fry it as you like. Put all the ingredients inside the bun and you're ready to go!
+        <div class="container">
+          <div class="row d-flex flex-wrap">
+            <div class="col-sm-6">
+              <a href=burger.html>
+              <img src=burger.jpg name="burger" class="img img-fluid img-thumbnail float-left">
+            </a>
+          </div>
+          <div class="col-sm-6">
+              <p> Here's a recipe for an delicious homemade buger. Super simple, super tasty!<br>
+                All you're going to need are:
+                <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">Product</th>
+                    <th scope="col">Quantity</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Beef (minced)</td>
+                    <td>200g</td>
+                  </tr>
+                  <tr>
+                    <td>Bun</td>
+                    <td>1</td>
+                  </tr>
+                  <tr>
+                    <td>Red onion</td>
+                    <td>1</td>
+                  </tr>
+                  <tr>
+                    <td>Tomatoes</td>
+                    <td>20g</td>
+                  </tr>
+                  <tr>
+                    <td>Barbecue sauce</td>
+                    <td>1-2 tablespoons</td>
+                  </tr>
+                  <tr>
+                    <td>Mayo</td>
+                    <td>1 tablespoon</td>
+                  </tr>
+                  <tr>
+                    <td>Lettuce</td>
+                    <td>1-2 leaves</td>
+                  </tr>
+                </tbody>
+              </table>
+            </p>
+          <p> Now cut the vegetables to small pieces and the bun in half.<br>
+            Fry the meat as you like. Put all the ingredients inside the bun and you're ready to go!
           </p><br><br>
           <a href=salad.html>
             <button type="button" class="btn btn-outline-primary">Download pdf</button>
