--- a/dessert.html
+++ b/dessert.html
@@ -12,38 +12,66 @@
             <div class="header">
             <h1>Hey guys!</h1>
             <h2>Let's cook :)</h2>
-        </a>
-      </div>
-        <div class="row">
-          <div class="col">
-            <h1>Perfect!</h1>
-            <p> You've made your choice and picked a recipe.<br>
-            Now let's cook! </p>
+          </a>
+        </div>
+          <div class="row">
+            <div class="col">
+              <h1>Perfect!</h1>
+              <p> You've made your choice and picked a recipe.<br>
+              Now let's cook! </p>
+              <h4>Dessert recipe.</h4>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="container">
-        <div class="row d-flex flex-wrap">
-          <div class="col-sm-12">
-            <h4>Dessert recipe.</h4>
-            <a href=dessert.html>
-            <img src=dessert.jpg name="dessert" class="img img-fluid img-thumbnail float-left">
-          </a>
-            <p> Here's a recipe for an apple pie. Super simple, super tasty!<br>
-              All you're going to need are:
-            <ul>
-              <li>apples</li>
-              <li>cinnamon</li>
-              <li>honey</li>
-              <li>flour</li>
-              <li>butter</li>
-              <li>sour cream</li>
-            </ul>
-          </p><br>
-          <p> Now cut and mix all the ingredients.<br>
-            Prepare dressing with olive oil and vinegar et voila!
+        <div class="container">
+          <div class="row d-flex flex-wrap">
+            <div class="col-sm-6">
+              <a href=dessert.html>
+              <img src=dessert.jpg name="dessert" class="img img-fluid img-thumbnail float-left">
+            </a>
+          </div>
+          <div class="col-sm-6">
+              <p> Here's a recipe for a great apple pie. Super simple, super tasty!<br>
+                All you're going to need are:
+                <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">Product</th>
+                    <th scope="col">Quantity</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Apples</td>
+                    <td>300g</td>
+                  </tr>
+                  <tr>
+                    <td>Flour</td>
+                    <td>1 cup</td>
+                  </tr>
+                  <tr>
+                    <td>Butter</td>
+                    <td>200g</td>
+                  </tr>
+                  <tr>
+                    <td>Sour cream</td>
+                    <td>100g</td>
+                  </tr>
+                  <tr>
+                    <td>Cinnamon</td>
+                    <td>1-2 tablespoons</td>
+                  </tr>
+                  <tr>
+                    <td>Baking powder</td>
+                    <td>1 teaspoon</td>
+                  </tr>
+                </tbody>
+              </table>
+            </p>
+          <p>Peel the appleas and cut into small pieces. Fry them on a pan with cinnamon and honey.<br>
+            Using flour, butter and sour cream make a crust. Then put all the ingredients layer by layer in a baking vessel and bake.
           </p><br><br>
-          <a href=salad.html>
+          <a href=dessert.html>
             <button type="button" class="btn btn-outline-primary">Download pdf</button>
           </a>
           </div>
