Download pdf button update

--- a/burger.html
+++ b/burger.html
@@ -75,7 +75,7 @@
           <p> Now cut the vegetables to small pieces and the bun in half.<br>
             Fry the meat as you like. Put all the ingredients inside the bun and you're ready to go!
           </p><br><br>
-          <a href=salad.html>
+          <a href="burger.pdf" download="Burger recipe">
             <button type="button" class="btn btn-outline-primary">Download pdf</button>
           </a>
           </div>
