--- a/dessert.html
+++ b/dessert.html
@@ -71,7 +71,7 @@
           <p>Peel the appleas and cut into small pieces. Fry them on a pan with cinnamon and honey.<br>
             Using flour, butter and sour cream make a crust. Then put all the ingredients layer by layer in a baking vessel and bake.
           </p><br><br>
-          <a href=dessert.html>
+          <a href="dessert.pdf" download="Dessert recipe">
             <button type="button" class="btn btn-outline-primary">Download pdf</button>
           </a>
           </div>
