--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
-      <div class="container head-box">
+      <div class="container head-box screen-only">
         <a href=index.html>
             <div class="header">
             <h1>Hey guys!</h1>
