--- a/salad.html
+++ b/salad.html
@@ -71,7 +71,7 @@
           <p> Now cut and mix all the ingredients.<br>
             Prepare dressing with olive oil and vinegar et voila!
           </p><br><br>
-          <a href=salad.html>
+          <a href="salad.pdf" download="Salad recipe">
             <button type="button" class="btn btn-outline-primary">Download pdf</button>
           </a>
           </div>
